[package]
name = "cloudflare-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = [
    "client",
    "full",
    "http1",
    "http2",
    "tokio",
] }
log = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }

url = { version = "2.5.4", features = ["serde"] }
